# sofa-minimal-poc

./: CMakeLists.txt  README.md  notes.md
SofaMinimal0/: CMakeLists.txt  SofaMinimal0Config.cmake.in  initSofaMinimal0.cpp  sofaminimal0.h  sofaminimal0.h.in
SofaMinimal1/: CMakeLists.txt  initSofaMinimal1.cpp  sofaminimal1.h.in
SofaMinimal1/scenes/: scene3.scn
SofaMinimal2/: CMakeLists.txt  initSofaMinimal2.cpp  sofaminimal2.h  sofaminimal2.h.in
SofaMinimal2/scenes/: scene1.scn
SofaMinimal3/: CMakeLists.txt  initSofaMinimal3.cpp  sofaminimal3.h.in
SofaMinimalTest/: CMakeLists.txt  dummyfile.cpp
SofaMinimalTest/SofaMinimalBaseMechanics_test/: CMakeLists.txt
SofaMinimalTest/SofaMinimalDeformable_test/: CMakeLists.txt
SofaMinimalTest/SofaMinimalExplicitOdeSolver_test/: CMakeLists.txt
SofaMinimalTest/SofaMinimalFramework_test/: CMakeLists.txt
SofaMinimalTest/SofaMinimalImplicitOdeSolver_test/: CMakeLists.txt
SofaMinimalTest/SofaMinimalLoader_test/: CMakeLists.txt
SofaMinimalTest/SofaNGBaseMechanics_test/: CMakeLists.txt
SofaMinimalTest/SofaNGDeformable_test/: CMakeLists.txt
SofaMinimalTest/SofaNGExplicitOdeSolver_test/: CMakeLists.txt
SofaMinimalTest/SofaNGGTestMain/: CMakeLists.txt  SofaNGGTestMainConfig.cmake.in
SofaMinimalTest/SofaNGImplicitOdeSolver_test/: CMakeLists.txt
SofaMinimalTest/SofaNGLoader_test/: CMakeLists.txt
SofaMinimalTest/framework_test/: CMakeLists.txt
SofaNG/: CMakeLists.txt  initSofaNG.cpp  sofang.h.in
SofaNG/scenes/: scene1.scn  scene1.scn.qglviewer.view  scene2.scn
SofaNGExt/: CMakeLists.txt  initSofaNGExt.cpp  sofangext.h
SofaNGTest/: CMakeLists.txt  dummyfile.cpp
SofaNGTest/SofaNGBaseMechanics_test/: CMakeLists.txt
SofaNGTest/SofaNGDeformable_test/: CMakeLists.txt
SofaNGTest/SofaNGExplicitOdeSolver_test/: CMakeLists.txt
SofaNGTest/SofaNGGTestMain/: CMakeLists.txt  SofaNGGTestMainConfig.cmake.in
SofaNGTest/SofaNGImplicitOdeSolver_test/: CMakeLists.txt
SofaNGTest/SofaNGLoader_test/: CMakeLists.txt
SofaNGTest/framework_test/: CMakeLists.txt
SofaNG_app/: CMakeLists.txt  Main.cpp
runSofaMinimal/: BatchGUI.cpp  BatchGUI.h  CMakeLists.txt  Main.cpp  sofa.rc
runSofaNG/: BatchGUI.cpp  BatchGUI.h  CMakeLists.txt  Main.cpp
